--- a/project/index.html
+++ b/project/index.html
@@ -6,13 +6,12 @@
     <title>User List</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Martian+Mono:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
 <div class="user-list"></div>
-
-
 <script src="index.js"></script>
 </body>
 </html>
